# trajectory_planning_for_quadrotor_swarms

./: .gitignore  CMakeLists.txt  README.md  colab_run.txt  environment_interactive.html  pygame_quadrotor_viewer.py  setup.sh  solution_interactive.html  solution_with_planes.html  visualize.py  visualize_interactive.py
config/: environment.yaml  environment10.yaml  environment11.yaml  environment2.yaml  environment3.yaml  environment5.yaml  environment6.yaml  environment7.yaml  environment8.yaml  environment9.yaml
include/: BezierCurve.hpp  ConflictAnnotation.h  ConflictAnnotation.hpp  DiscreteSchedule.hpp  Environment.h  Environment.hpp  FCLCollisionChecker.h  FCLCollisionChecker.hpp  FCLConflictAnnotation.h  FCLConflictAnnotation.hpp  GoalAssigner.hpp  Graph.h  Graph.hpp  GridRoadMapGenerator.h  GridRoadMapGenerator.hpp  HyperPlane.hpp  HyperPlaneSeparator.hpp  IterativeRefinement.hpp  MAPFCEnvironment.hpp  MAPFCSolver.hpp  MAPFCTypes.hpp  MAPFInstance.hpp  RoadMapGenerator.h  RoadMapGenerator.hpp  RobotModel.h  RobotModel.hpp  SPARSRoadMapGenerator.h  SPARSRoadMapGenerator.hpp  SafePolyhedron.hpp  SubdividedSchedule.hpp  SweptConflictAnnotation.h  SweptConflictAnnotation.hpp
simulation/: cp_to_crazyswarm2_format.py  install_crazyswarm2.sh  install_ros2_jazzy.sh
src/: BezierCurve.cpp  ConflictAnnotation.cpp  DiscreteSchedule.cpp  Environment.cpp  FCLCollisionChecker.cpp  FCLConflictAnnotation.cpp  GoalAssigner.cpp  Graph.cpp  GridRoadMapGenerator.cpp  HyperPlane.cpp  HyperPlaneSeparator.cpp  IterativeRefinement.cpp  MAPFCEnvironment.cpp  MAPFCSolver.cpp  MAPFCTypes.cpp  RoadMapGenerator.cpp  RobotModel.cpp  SPARSRoadMapGenerator.cpp  SafePolyhedron.cpp  SubdividedSchedule.cpp  SweptConflictAnnotation.cpp  main.cpp
